kubernetes/configs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mech-server

---

apiVersion: v1
kind: Namespace
metadata:
  name: mech-client
